<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".task1Activity1">

    <Button
        android:id="@+id/startrecording"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="490sp"
        android:clickable="true"
        android:text="@string/record"
        android:visibility="visible" />

    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:layout_marginTop="490sp"
        android:layout_marginRight="10sp"
        android:layout_toLeftOf="@id/repeat_record"
        android:clickable="false"
        android:text="@string/deleteOne"
        android:visibility="invisible" />

    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="490sp"
        android:layout_toRightOf="@id/repeat_record"
        android:clickable="false"
        android:text="@string/deleteAll"
        android:visibility="invisible" />

    <Button
        android:id="@+id/repeat_record"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="490sp"
        android:clickable="false"
        android:text="@string/repeat_record"
        android:visibility="invisible" />

    <Button
        android:id="@+id/go_graph"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="540sp"
        android:clickable="false"
        android:text="График"
        android:visibility="invisible"
        />

    <TextView
        android:id="@+id/hit_secs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="360sp"
        android:text="@string/secs"
        android:textSize="30sp"
        android:textColor="@color/black"
        />

    <SeekBar
        android:id="@+id/mic_setting"
        android:layout_width="300sp"
        android:layout_height="60sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="420sp"
        android:max="30000"
        android:min="10000"
        android:progress="20000" />

    <EditText
        android:id="@+id/visota"
        android:layout_width="120sp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="250sp"
        android:layout_marginTop="50sp"
        android:ems="10"
        android:hint="@string/visota"
        android:inputType="number" />

    <EditText
        android:id="@+id/massa"
        android:layout_width="95sp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50sp"
        android:layout_marginTop="50sp"
        android:ems="10"
        android:hint="@string/massa"
        android:inputType="numberDecimal" />


    <Button
        android:id="@+id/addm"
        android:layout_width="80sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:layout_toEndOf="@id/massa"
        android:clickable="false"
        android:text="+5 гр" />

    <TextView
        android:id="@+id/display_content"
        android:layout_width="360sp"
        android:layout_height="250sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100sp"
        android:orientation="vertical"
        android:text=""
        android:textSize="20sp" />
    <TextView
        android:id="@+id/microTip"
        android:layout_width="400sp"
        android:layout_height="60sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="590sp"
        android:orientation="vertical"
        android:gravity="center"
        android:text="Если после удара таймер не начал отсчёт, нажмите стоп и подвиньте позунок влево"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:visibility="invisible"
        />

    <Button
        android:id="@+id/stopRecordButton"
        android:layout_width="wrap_content"
        android:text="Стоп"
        android:layout_height="50sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="490sp"
        android:clickable="false"
        android:visibility="invisible"
        />


</RelativeLayout>